// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Renders button with green color 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "class": "sc-jTzLTM kwFwXW",
      "color": "green",
      "kind": "filled",
    },
    "children": Array [
      Object {
        "attribs": Object {
          "class": "sc-bxivhb bcCefa ButtonText",
        },
        "children": Array [
          Object {
            "data": "With green color",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
        ],
        "name": "span",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
        },
      },
    ],
    "name": "button",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
      "color": undefined,
      "kind": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
      "color": undefined,
      "kind": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;

exports[`Button Renders outlined button with default color 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "class": "sc-jTzLTM ddlFZH",
      "color": "blue",
      "kind": "outlined",
      "width": "150px",
    },
    "children": Array [
      Object {
        "attribs": Object {
          "class": "sc-bxivhb bcCefa ButtonText",
        },
        "children": Array [
          Object {
            "data": "Skip Changes",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
        ],
        "name": "span",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
        },
      },
    ],
    "name": "button",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
      "color": undefined,
      "kind": undefined,
      "width": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
      "color": undefined,
      "kind": undefined,
      "width": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;
